--- a/.github/workflows/cache-branch.yml
+++ b/.github/workflows/cache-branch.yml
@@ -88,7 +88,7 @@ jobs:
             had_branch=$(git branch -r)
             echo "had_branch=$had_branch"
             if [[ "$had_branch" == *"$branch_name"* ]]; then
-              if [[ ${{inputs.rm_old_branch}} == '' ]]; then
+              if [[ '${{inputs.rm_old_branch}}' == '' ]]; then
                 jq --arg currnent "$branch_name" '.current_branch = $currnent' ${{ env.BRANCH_JSON }} > temp.json
                 time=$(date +%Y-%m-%d\ %H:%M:%S)
                 jq --arg time "$time" '.time = $time'  temp.json  > temp1.json && mv temp1.json ${{ env.BRANCH_JSON }}
